; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_noise-suppress-filter.c_reset_data.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_noise-suppress-filter.c_reset_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.noise_suppress_data = type { i64, i32, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.noise_suppress_data*)* @reset_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reset_data(%struct.noise_suppress_data* %0) #0 {
  %2 = alloca %struct.noise_suppress_data*, align 8
  %3 = alloca i64, align 8
  store %struct.noise_suppress_data* %0, %struct.noise_suppress_data** %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %23, %1
  %5 = load i64, i64* %3, align 8
  %6 = load %struct.noise_suppress_data*, %struct.noise_suppress_data** %2, align 8
  %7 = getelementptr inbounds %struct.noise_suppress_data, %struct.noise_suppress_data* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ult i64 %5, %8
  br i1 %9, label %10, label %26

10:                                               ; preds = %4
  %11 = load %struct.noise_suppress_data*, %struct.noise_suppress_data** %2, align 8
  %12 = getelementptr inbounds %struct.noise_suppress_data, %struct.noise_suppress_data* %11, i32 0, i32 3
  %13 = load i32*, i32** %12, align 8
  %14 = load i64, i64* %3, align 8
  %15 = getelementptr inbounds i32, i32* %13, i64 %14
  %16 = call i32 @clear_circlebuf(i32* %15)
  %17 = load %struct.noise_suppress_data*, %struct.noise_suppress_data** %2, align 8
  %18 = getelementptr inbounds %struct.noise_suppress_data, %struct.noise_suppress_data* %17, i32 0, i32 2
  %19 = load i32*, i32** %18, align 8
  %20 = load i64, i64* %3, align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  %22 = call i32 @clear_circlebuf(i32* %21)
  br label %23

23:                                               ; preds = %10
  %24 = load i64, i64* %3, align 8
  %25 = add i64 %24, 1
  store i64 %25, i64* %3, align 8
  br label %4

26:                                               ; preds = %4
  %27 = load %struct.noise_suppress_data*, %struct.noise_suppress_data** %2, align 8
  %28 = getelementptr inbounds %struct.noise_suppress_data, %struct.noise_suppress_data* %27, i32 0, i32 1
  %29 = call i32 @clear_circlebuf(i32* %28)
  ret void
}

declare dso_local i32 @clear_circlebuf(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
